# Fast-Edit

./: .gitignore  Cargo.toml  README.md  RenderFastLauncher.applescript  UI_IMPROVEMENTS.md  main.py  requirements.txt
app/: index.html  package.json  pnpm-lock.yaml
app/src/: styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: AutomationPanel.tsx  ComposerPanel.tsx  SceneListPanel.tsx  SubtitlePanel.tsx  SystemStatusBar.tsx
app/src/hooks/: useSystemStatus.ts
app/src/pages/: App.tsx
app/src/state/: useProject.ts
app/src/types/: project.ts
app/src/utils/: pickDialog.ts
assets/: render_fast_icon.icns
docs/: architecture.md
render-core/: Cargo.toml
render-core/examples/: rename_demo.rs
render-core/src/: lib.rs  monitor.rs  organize.rs  project.rs  render.rs  stitch.rs  subtitle.rs  timeline.rs
src/core/: batch_rename.py  filter_presets.py  subtitle_generator.py  video_composer.py
src/ui/: automation_tab.py  composer_tab.py  effects_tab.py  main_window.py  project_tab.py  unified_styles.py
tmp_test/image/: a.ppm
tmp_test/subtitles/: a.srt
