[package]
name = "render-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
hound = "3.5"
whisper-rs = { version = "0.15", features = ["coreml", "tracing_backend"] }
natord = "1.0"
num_cpus = "1.16"
tempfile = "3.10"

# Native macOS frameworks
avfoundation = "0.1.0"
metal = "0.28"
objc = "0.2"
core-graphics = "0.23"

# System info
sysinfo = "0.29"
