[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.4.1", features = ["wry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
render-core = { path = "../../render-core" }
tauri-plugin-dialog = "2.4.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
